fix: candidate fall-through and null optional args; verify 18 effects
- parseLeaf/parseCondition/parsePrimary now fall through to the next overlapping
  candidate when a match's arguments fail to parse (e.g. send vs send actionbar/title)
- SimpleArguments permits null elements (absent optional %-slots%); List.copyOf rejected them
- add ConformanceEffectsTest exercising 18 implemented effects end-to-end
- flip 18 effect entries to done